# simple_httpserver

./: CMakeLists.txt  HTTPHandler.c  HTTPHandler.h  Socket.c  Socket.h  main.c
